--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_NATIVE_APP_API_URL=http://172.16.7.204:8080
+REACT_NATIVE_APP_API_URL=https://user.stableswap.live
 SERVER=serverpass
 CRYPTO_SALT=123xyzCRYPTOprojectSALT123xYZ
 CRYPTO_PASS=xyzcrypoPROJECT123XYZCRYPTOpass
